--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "画像整理アプリ（イメージクリーンアップアシスタント）",
   "main": "src/main/main.js",
   "scripts": {
-    "start": "start.bat",
-    "dev": "start.bat --dev",
+    "start": "electron .",
+    "dev": "electron . --dev",
     "build": "electron-builder",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "tailwindcss -i ./src/renderer/css/style.css -o ./src/renderer/css/output.css --watch",
+    "build:css:prod": "tailwindcss -i ./src/renderer/css/style.css -o ./src/renderer/css/output.css --minify"
   },
   "keywords": [
     "image",
@@ -19,8 +21,11 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "electron": "^28.0.0",
-    "electron-builder": "^24.6.4"
+    "electron-builder": "^24.6.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10"
   },
   "repository": {
     "type": "git",
