--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "dev": "electron . --dev",
     "build": "electron-builder",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:all": "npm run test && npm run test:e2e",
     "build:css": "tailwindcss -i ./src/renderer/css/style.css -o ./src/renderer/css/output.css --watch",
     "build:css:prod": "tailwindcss -i ./src/renderer/css/style.css -o ./src/renderer/css/output.css --minify"
   },
@@ -21,6 +29,7 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.53.1",
     "autoprefixer": "^10.4.21",
     "electron": "^28.0.0",
     "electron-builder": "^24.6.4",
