ファイル監視機能を追加し、画像ファイルの変更を検知するためのロジックを実装しました。設定画面にファイル監視の有効/無効を切り替えるオプションを追加し、キャッシュ機能の設定も強化しました。また、関連するUIの更新を行い、ユーザー体験を向上させました。

--- a/package.json
+++ b/package.json
@@ -47,21 +47,23 @@
   },
   "homepage": "https://github.com/kazukiti8/Image_Cleaner#readme",
   "dependencies": {
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "chokidar": "^3.5.3"
   },
   "build": {
     "appId": "com.example.image-cleanup-assistant",
-    "productName": "イメージクリーンアップアシスタント",
+    "productName": "ImageCleanupAssistant",
     "directories": {
       "output": "dist"
     },
     "files": [
       "src/**/*",
-      "package.json"
+      "package.json",
+      "node_modules/**/*"
     ],
     "win": {
-      "target": "nsis",
-      "icon": "src/renderer/assets/icons/app-icon.png"
+      "target": "portable",
+      "artifactName": "${productName}-${version}.${ext}"
     }
   }
 }
