--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/main/main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --dev",
+    "dev": "powershell -Command \"chcp 65001; electron . --dev\"",
+    "dev:ps": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; electron . --dev\"",
     "build": "electron-builder",
     "test": "jest",
     "test:watch": "jest --watch",
